fixing typeo + unit tests

--- a/test/mustache_test_complex_view.mustache
+++ b/test/mustache_test_complex_view.mustache
@@ -1,9 +1,5 @@
 Hello, {{planet}}.
 There are also other planets to say "Hello":
 {{#other}}
-- {{name}}
-  {{#size}}
-  with size of {{value}}
-  (which is {{description}})
-  {{/size}}
+- {{name}} {{#size}} with size of {{value}} (which is {{description}}) {{/size}}
 {{/other}}
